# msailor

./: Cargo.toml  README.md
src/: config.rs  dwnl.rs  git.rs  main.rs  menu.rs  path.rs  repo.rs
src/modules/: config.rs  mod.rs  tmp.rs  tui.rs
src/modules/utils/: config.rs  dwnl.rs  edit.rs  envv.rs  git.rs  menu.rs  mod.rs  path.rs  repo.rs
