[package]
name = "msailor"
version = "0.0.0"
edition = "2021"

[dependencies]
git2 = "0.14"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tui = "0.19.0"
crossterm = "0.25.0"
# dioxus = { version = "0.5.1", features = ["desktop"] }
